# tent

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game.c
c_code/: game_aux.c  game_text.c  queue.c
c_test_code/: game_test_dsanyaronke.c  game_test_loreilly.c  game_test_mguillet001.c  game_test_skadionik.c  test_gameExt.c
h_code/: game.h  game_aux.h  game_ext.h  struct.h
